--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "dom": "^0.0.3",
     "primereact": "^10.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
